--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--color-bg);
+	background-color: white;
 	background-size: 100vw auto;
 }
 
