--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,9 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: white;
+	/* background-color: #312b29; */
+	background-color: #ffffff;
+
 	background-size: 100vw auto;
 }
 
