--- a/src/app.css
+++ b/src/app.css
@@ -79,6 +79,7 @@ button {
 
 nav {
 	position: fixed;
+	width: 72px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -86,6 +87,10 @@ nav {
 	justify-content: center;
 	align-items: start;
 	background-color: var(--grey-10);
+}
+
+nav:hover {
+	width: 182px;
 }
 
 .gradient-line {
