--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
 	--grey-10: #ffffff;
 	--grey-9: #f1f1f1;
 	--grey-5: #7d7d7e;
+	--grey-3: #3b3b3d;
 	--grey-1: #020203;
 
 	--beige-9: #ece0db;
@@ -84,6 +85,7 @@ button {
 }
 
 nav {
+	box-sizing: border-box;
 	position: fixed;
 	overflow: hidden;
 	width: 72px;
@@ -92,12 +94,12 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	background-color: var(--grey-10);
-	padding: 0px !important;
+	padding: 16px !important;
 	box-shadow:
 		rgba(0, 0, 0, 0.09) 0px 0.75px 0.75px -0.75px,
 		rgba(0, 0, 0, 0.09) 0px 2.75px 2.75px -1.75px,
 		rgba(0, 0, 0, 0.09) 0px 12px 12px -2.5px;
-	transition: width var(--transition-1);
+	transition: var(--transition-1);
 }
 
 nav:hover {
@@ -119,13 +121,14 @@ section {
 	display: flex;
 }
 
+/* ButtonNav */
 .button-nav {
 	height: 48px;
 	width: 182px;
 	display: flex;
 	align-items: center;
 	gap: 8px;
-	padding-left: 24px;
+	padding-left: 8px;
 	background: none;
 }
 
@@ -133,6 +136,7 @@ section {
 	width: 20px;
 	height: 20px;
 	fill: var(--color-text-2);
+	transition: var(--transition-1);
 }
 
 .button-nav:hover svg {
@@ -151,6 +155,56 @@ nav:hover .button-nav span {
 
 .button-nav:hover span {
 	color: var(--color-text);
+}
+
+/* ButtonCta */
+.button-cta {
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	padding-left: 8px;
+	border-radius: 20px;
+	background: linear-gradient(to bottom, var(--grey-1), var(--grey-3));
+	transition: var(--transition-1);
+}
+
+.button-cta svg {
+	min-width: 20px;
+	max-width: 20px;
+	height: 20px;
+	fill: var(--grey-10);
+	transition: var(--transition-1);
+}
+
+.button-cta span {
+	color: var(--grey-10);
+	opacity: 0;
+	transition: var(--transition-1);
+}
+
+.button-cta:hover {
+	opacity: 0.9;
+	border-radius: 4px;
+}
+
+.button-cta:active {
+	opacity: 0.8;
+}
+
+nav:hover .button-cta span {
+	opacity: 1;
+}
+
+nav:hover .button-cta {
+	width: 150px;
+	padding-left: 16px;
+}
+
+.bottom {
+	position: absolute;
+	bottom: 14px;
 }
 
 .contact-grid {
