--- a/src/app.css
+++ b/src/app.css
@@ -47,19 +47,29 @@ h1 {
 	font-variation-settings:
 		'wght' 385,
 		'opsz' 15;
+	margin: 0;
 }
 
 h2 {
-	font-size: 24px;
+	font-size: 38px;
+	line-height: 100%;
+	letter-spacing: -1.25%;
+	font-variation-settings:
+		'wght' 385,
+		'opsz' 15;
+	margin: 0;
 }
 
 h3 {
 	font-size: 20px;
+	margin: 0;
 }
 
 p {
 	font-size: var(--font-size-body);
-	line-height: 1.48;
+	letter-spacing: -1%;
+	line-height: 138%;
+	margin: 0;
 }
 
 span {
@@ -334,7 +344,6 @@ nav:hover .button-cta {
 .hero div h1 {
 	position: absolute;
 	width: fit-content;
-	margin: 0px;
 	top: 52px;
 	left: 0px;
 }
@@ -371,7 +380,42 @@ nav:hover .button-cta {
 	height: 100vh;
 	display: flex;
 	padding: 0px 72px 0px 144px;
-	background-color: green;
+}
+
+/* Components */
+.components {
+	box-sizing: border-box;
+	height: 100vh;
+	display: flex;
+	gap: 0px;
+	padding: 0px 0px 0px 72px;
+}
+
+.components span {
+	box-sizing: border-box;
+	height: 100%;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: end;
+	padding: 0 64px 0 208px;
+	gap: 20px;
+	background-color: var(--grey-10);
+}
+
+.components div {
+	box-sizing: border-box;
+	height: 100%;
+	width: 50%;
+	background-color: red;
+}
+
+.components h2,
+.components p {
+	width: 100%;
+	min-width: 320px;
+	max-width: 348px;
 }
 
 .contact-grid {
