--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,12 @@
 	--beige-5: #5f5854;
 	--beige-3: #312b29;
 
+	--pink-9: #ffdbeb;
+	--pink-6: #ff30ad;
+
+	--orange-9: #ffded4;
+	--orange-6: #ff4724;
+
 	--color-bg: var(--grey-9);
 	--color-button: var(--beige-9);
 	--color-button-2: var(--beige-5);
