--- a/src/app.css
+++ b/src/app.css
@@ -424,12 +424,15 @@ nav:hover .button-cta {
 .node-container {
 	position: absolute;
 	cursor: grab;
-	transform-origin: center center;
+	touch-action: none;
+	user-select: none;
+	overflow: hidden;
+	padding: 2px;
 	transition: transform 0.3s var(--easing-1);
 }
 
 .node-container:hover {
-	transform: scale(1.1);
+	transform: scale(1.1) rotate(15deg);
 }
 
 .node-container:active {
