--- a/src/app.css
+++ b/src/app.css
@@ -608,8 +608,9 @@ nav:hover .button-cta {
 .slider-container {
 	overflow: hidden;
 	position: relative;
-	height: 300px;
+	height: 100%;
 	width: 50%;
+	background-color: lightblue;
 }
 
 .slider-item {
@@ -620,6 +621,7 @@ nav:hover .button-cta {
 	box-shadow:
 		0px 0px 1px rgba(0, 0, 0, 0.05),
 		0px 8px 16px rgba(0, 0, 0, 0.1);
+	transition: var(--transition-2);
 }
 
 .slider-item-content {
@@ -630,21 +632,28 @@ nav:hover .button-cta {
 
 .slider-controls {
 	position: absolute;
-	top: 50%;
+	bottom: 20px;
 	left: 50%;
+	transform: translateX(-50%);
 	display: flex;
 	gap: 16px;
 }
 
-.slider-control-button {
+.slider-controls button {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	cursor: pointer;
 	display: flex;
 	padding-bottom: 1px;
 	align-items: center;
 	justify-content: center;
+	font-family: var(--font-body);
 	font-size: 18px;
-	transition: all 300ms;
+	background: var(--grey-10);
+	color: var(--grey-1);
+}
+
+.slider-controls button.active {
+	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
+	color: var(--grey-10);
 }
