--- a/src/app.css
+++ b/src/app.css
@@ -615,19 +615,13 @@ nav:hover .button-cta {
 
 .slider-item {
 	position: absolute;
-	background-color: #fff;
-	padding: 8px;
+	background-color: var(--grey-10);
+	padding: 6px;
 	border-radius: 6px;
 	box-shadow:
 		0px 0px 1px rgba(0, 0, 0, 0.05),
 		0px 8px 16px rgba(0, 0, 0, 0.1);
 	transition: var(--transition-2);
-}
-
-.slider-item-content {
-	width: 240px;
-	height: 240px;
-	background-color: red;
 }
 
 .slider-controls {
