--- a/src/app.css
+++ b/src/app.css
@@ -397,7 +397,7 @@ nav:hover .button-cta {
 	padding: 0px 0px 0px 72px;
 }
 
-.components span {
+.left {
 	box-sizing: border-box;
 	height: 100%;
 	width: 50%;
@@ -406,6 +406,20 @@ nav:hover .button-cta {
 	justify-content: center;
 	align-items: end;
 	padding: 0 64px 0 208px;
+	gap: 20px;
+	background-color: var(--grey-10);
+	z-index: 100;
+}
+
+.right {
+	box-sizing: border-box;
+	height: 100%;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: start;
+	padding: 0 208px 0 64px;
 	gap: 20px;
 	background-color: var(--grey-10);
 }
