--- a/src/app.css
+++ b/src/app.css
@@ -33,6 +33,8 @@
 	--transition-1: 0.15s var(--easing-1);
 	--transition-2: 0.3s var(--easing-1);
 
+	--shadow-1: 0px 0px 1px rgba(0, 0, 0, 0.05), 0px 8px 16px rgba(0, 0, 0, 0.1);
+
 	font-family: var(--font-body);
 	font-size: var(--font-size-body);
 	color: var(--color-text);
@@ -131,9 +133,10 @@ nav:hover {
 }
 
 section {
+	box-sizing: border-box;
 	display: flex;
 	gap: 10px;
-	height: 100%;
+	height: 100vh;
 	justify-content: center;
 	align-items: center;
 }
@@ -146,9 +149,7 @@ iframe {
 	max-height: 90%;
 	aspect-ratio: 1.33333;
 	border-radius: 6px;
-	box-shadow:
-		0px 0px 1px rgba(0, 0, 0, 0.05),
-		0px 8px 16px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--shadow-1);
 }
 
 .nav-links {
@@ -383,7 +384,6 @@ nav:hover .button-cta {
 /* Demo */
 .demo {
 	box-sizing: border-box;
-	height: 100vh;
 	display: flex;
 	padding: 0px 72px 0px 144px;
 }
@@ -391,7 +391,6 @@ nav:hover .button-cta {
 /* Components */
 .components {
 	box-sizing: border-box;
-	height: 100vh;
 	display: flex;
 	gap: 0px;
 	padding: 0px 0px 0px 72px;
@@ -439,7 +438,7 @@ nav:hover .button-cta {
 	user-select: none;
 	overflow: hidden;
 	padding: 2px;
-	transition: transform 0.3s var(--easing-1);
+	transition: var(--transition-2);
 }
 
 .node-container:hover {
@@ -630,9 +629,7 @@ nav:hover .button-cta {
 	background-color: var(--grey-10);
 	padding: 6px;
 	border-radius: 6px;
-	box-shadow:
-		0px 0px 1px rgba(0, 0, 0, 0.05),
-		0px 8px 16px rgba(0, 0, 0, 0.1);
+	box-shadow: var(--shadow-1);
 	transition: var(--transition-2);
 }
 
@@ -682,4 +679,41 @@ nav:hover .button-cta {
 	aspect-ratio: 1;
 	background-color: var(--color-bg);
 	padding: 16px;
+}
+
+/* FEATURES */
+.features-container {
+	display: flex;
+	padding: 156px 96px 164px 168px;
+}
+
+.features {
+	max-width: 864px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	background-color: var(--grey-10);
+	border-radius: 6px;
+	box-shadow: var(--shadow-1);
+}
+
+.features span {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
+	padding: 48px;
+	gap: 20px;
+}
+
+.features div:nth-of-type(2) {
+	border-left: 2px solid var(--color-bg);
+	border-right: 2px solid var(--color-bg);
+}
+
+.features-shape {
+	position: absolute;
+	inset: 48px 0px 0px 48px;
+	width: 108px;
+	height: 108px;
 }
