--- a/src/app.css
+++ b/src/app.css
@@ -32,6 +32,7 @@
 	--easing-1: cubic-bezier(0.38, 0, 0.16, 1);
 	--transition-1: 0.15s var(--easing-1);
 	--transition-2: 0.3s var(--easing-1);
+	--transition-3: 0.5s var(--easing-1);
 
 	--shadow-1: 0px 0px 1px rgba(0, 0, 0, 0.05), 0px 8px 16px rgba(0, 0, 0, 0.1);
 
@@ -133,6 +134,7 @@ nav:hover {
 }
 
 section {
+	position: relative;
 	box-sizing: border-box;
 	display: flex;
 	gap: 10px;
@@ -691,29 +693,80 @@ nav:hover .button-cta {
 	max-width: 864px;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	display: flex;
 	background-color: var(--grey-10);
 	border-radius: 6px;
 	box-shadow: var(--shadow-1);
 }
 
+.features h2,
+.features p {
+	width: 316px;
+	opacity: 0;
+	transition: var(--transition-3);
+}
+
 .features span {
+	flex-grow: 1;
+	box-sizing: border-box;
 	position: relative;
+	width: 192px;
+	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	justify-content: end;
 	padding: 48px;
 	gap: 20px;
+	transition: var(--transition-3);
+	cursor: pointer;
 }
 
-.features div:nth-of-type(2) {
+.features span:nth-of-type(2) {
 	border-left: 2px solid var(--color-bg);
 	border-right: 2px solid var(--color-bg);
+}
+
+.features span.active {
+	width: 100%;
+}
+
+.features span.active h2,
+.features span.active p {
+	opacity: 1;
 }
 
 .features-shape {
 	position: absolute;
 	inset: 48px 0px 0px 48px;
-	width: 108px;
+	width: 96px;
 	height: 108px;
+}
+
+.features-controls {
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	gap: 16px;
+}
+
+.features-controls button {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	display: flex;
+	padding-bottom: 1px;
+	align-items: center;
+	justify-content: center;
+	font-family: var(--font-body);
+	font-size: 18px;
+	background: var(--grey-10);
+	color: var(--grey-1);
+}
+
+.features-controls button.active {
+	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
+	color: var(--grey-10);
 }
