--- a/src/app.css
+++ b/src/app.css
@@ -35,6 +35,7 @@
 	--transition-3: 0.5s var(--easing-1);
 
 	--shadow-1: 0px 0px 1px rgba(0, 0, 0, 0.05), 0px 8px 16px rgba(0, 0, 0, 0.1);
+	--shadow-grey: 0 0 0 16px var(--grey-9);
 
 	font-family: var(--font-body);
 	font-size: var(--font-size-body);
@@ -674,7 +675,7 @@ nav:hover .button-cta {
 	align-items: center;
 }
 
-.container div {
+.container canvas {
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 512px !important;
@@ -690,26 +691,26 @@ nav:hover .button-cta {
 }
 
 .features {
+	position: relative;
 	max-width: 864px;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	display: flex;
 	background-color: var(--grey-10);
 	border-radius: 6px;
-	box-shadow: var(--shadow-1);
+	box-shadow: var(--shadow-1), var(--shadow-grey);
 }
 
 .features h2,
 .features p {
-	width: 316px;
+	text-wrap: balance;
+	width: 296px;
 	opacity: 0;
 	transition: var(--transition-3);
 }
 
 .features span {
 	flex-grow: 1;
-	box-sizing: border-box;
 	position: relative;
 	width: 192px;
 	overflow: hidden;
@@ -745,7 +746,7 @@ nav:hover .button-cta {
 
 .features-controls {
 	position: absolute;
-	bottom: 20px;
+	bottom: -64px;
 	left: 50%;
 	transform: translateX(-50%);
 	display: flex;
