--- a/src/app.css
+++ b/src/app.css
@@ -675,7 +675,7 @@ nav:hover .button-cta {
 	align-items: center;
 }
 
-.container canvas {
+.container div {
 	box-sizing: border-box;
 	width: 100%;
 	max-width: 512px !important;
@@ -692,9 +692,10 @@ nav:hover .button-cta {
 
 .features {
 	position: relative;
-	max-width: 864px;
 	width: 100%;
 	height: 100%;
+	max-width: 864px;
+	max-height: 864px;
 	display: flex;
 	background-color: var(--grey-10);
 	border-radius: 6px;
